# ChatterBug

./: .gitignore  CHANGELOG.md  GUI_IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  KEYBOARD_SHORTCUTS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  QUICKSTART_GUI.md  README.md  REFACTORING_SUMMARY.md  asr.py  audio.py  chatterbug_design_doc.md  check_deps.py  demo_gui.py  main.py  mypy_output.txt  pyproject.toml  requirements.txt  run.py  storage.py  test_condenser_basic.py  test_decoder_basic.py  test_silero_vad_e2e.py  test_vad_wrapper_basic.py  ui.py
.github/: copilot-instructions.md
Planning and Documentation/: ARCHITECTURE.md  Polisher_Performance_Report.md
chatterbug/app/: __init__.py  transcription_session.py
chatterbug/audio/: recorder.py  vad.py
chatterbug/cli/: helpers.py  main.py  sinks.py
chatterbug/config/: schema.py
chatterbug/domain/: __init__.py  constants.py  model.py
chatterbug/engines/: factory.py  model_registry.py  parakeet.py  voxtral.py  voxtral_local.py  voxtral_vllm.py  whisper_turbo.py  whisper_vllm.py
chatterbug/storage/: history.py
chatterbug/tui/: main.py
docs/: ARCHITECTURE.md  Design.md  ENGINE_BATCH_INTERFACE.md  GUI_FUTURE_RECOMMENDATIONS.md  README.md  Redesign.md  daemon.md
docs/engines/: canary_qwen.md
docs/wiki/: ARCHITECTURE.md  Audio-Recording.md  Backend-Architecture.md  Config-Options.md  Configuration-Schema.md  History-Storage.md  Home.md  Hotkey-System.md  Installation-Guide.md  Keycodes-Reference.md  Recording.md  Text-Output.md  Threading-Model.md  Troubleshooting.md
scripts/: README.md  install-desktop-entry.sh  uninstall-desktop-entry.sh
src/: config_schema.yaml  history_manager.py  input_simulation.py  key_listener.py  main.py  result_thread.py  transcription.py  utils.py
src/cli/: main.py
src/engines/: voxtral_local.py
src/polish/: llama_cpp_polisher.py
src/ui/: history_widget.py  hotkey_widget.py  keycode_mapping.py  main_window.py  output_options_widget.py  settings_dialog.py
tests/: conftest.py  test_all_engines.py  test_cli_transcribe.py  test_config.py  test_config_edge_cases.py  test_engine_config.py  test_engine_factory.py  test_engine_registry.py  test_gui.py  test_hardware.py  test_history_storage.py  test_input_simulation.py  test_integration.py  test_key_listener.py  test_model_directory.py  test_model_registry.py  test_model_registry_edge_cases.py  test_model_registry_normalization.py  test_polisher.py  test_segment_arbiter_integration.py  test_session_edge_cases.py  test_settings.py  test_storage_atomic.py  test_storage_repository.py  test_transcription.py  test_transcription_options_validation.py  test_transcription_result.py  test_transcription_session.py  test_wayland_compat.py  test_whisper_engine_integration.py  test_whisper_turbo_cuda_libs.py  test_whisper_turbo_tdd.py
tests/app/: test_batch.py  test_progress.py  test_progress_callbacks.py  test_transcribe_file_workflow.py
tests/audio/: test_chunking_algorithm.py  test_condenser_contract.py  test_decoder_contract.py  test_preprocessing.py  test_recorder_contract.py  test_vad_contract.py  test_validation.py
tests/cli/: test_bench_command.py  test_check_command.py  test_deps_command.py
wiki/: Configuration.md  Engines-and-Presets.md  Getting-Started.md  Why-Vociferous.md
(+125 files in other folders)
