[project]
name = "chatterbug"
version = "0.0.0"
description = "Local-first ASR with vLLM-backed Whisper and Voxtral engines (accuracy-first, GPU-optimized)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "structlog>=24.0.0",
  "numpy>=1.26.0",
  "faster-whisper>=1.0.0",
  "silero-vad>=5.0",
  "torch>=2.0.0",
  "nvidia-cudnn-cu12>=9.1.0.70",
  "transformers>=4.54.0",
    "mistral-common[audio]>=1.0.0",
  "accelerate>=0.20.0",
  "rich>=13.7.0",
  "sounddevice>=0.4.6",
  "pyperclip>=1.8.2",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.10.0"]
polish = ["llama-cpp-python>=0.3.0", "huggingface_hub>=0.23.0"]

[project.scripts]
chatterbug = "chatterbug.cli.main:main"

[tool.setuptools]
packages = ["chatterbug"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
exclude = ".*(chatterbug/tui/|chatterbug/polish/).*"

[[tool.mypy.overrides]]
module = [
  "tests.*",
  "chatterbug.engines.whisper_turbo",
  "chatterbug.engines.whisper_vllm",
  "chatterbug.engines.voxtral_vllm",
  "chatterbug.engines.voxtral_local",
  "chatterbug.audio.vad",
  "chatterbug.engines.hardware",
  "chatterbug.polish.*",
]
ignore_errors = true

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
