[project]
name = "vociferous"
version = "0.5.0"
description = "Local-first ASR with Canary-Qwen and OpenAI Whisper engines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "structlog>=24.0.0",
  "numpy>=1.26.0",
  "rich>=13.7.0",
  "sounddevice>=0.4.6",
  "pyperclip>=1.8.2",
  "tomli-w>=1.0.0",
  "openai-whisper>=20240930",
  "silero-vad>=5.0",
  "torch>=2.6.0",
  "nemo_toolkit[asr,tts]>=2.1.0",
  "sacrebleu>=2.0.0",
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "requests>=2.31.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.10.0"]
polish = ["llama-cpp-python>=0.3.0", "huggingface_hub>=0.23.0"]
gui = [
  "kivymd>=1.2.0",
  "kivy>=2.3.0",
  "pillow>=10.0.0",
]
cuda = [
  "torch>=2.0.0",
  "nvidia-cudnn-cu12>=9.1.0.70",
]
voxtral = [
  "transformers>=4.54.0",
  "mistral-common[audio]>=1.0.0",
  "accelerate>=0.20.0",
  "torch>=2.0.0",
]

[project.scripts]
vociferous = "vociferous.cli.main:main"
vociferous-gui = "vociferous.gui.app:run_gui"

[tool.setuptools]
packages = ["vociferous"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
exclude = ".*(vociferous/polish/|vociferous/gui/).*"

[[tool.mypy.overrides]]
module = [
  "tests.*",
  "vociferous.engines.whisper_turbo",
  "vociferous.engines.voxtral_local",
  "vociferous.audio.vad",
  "vociferous.engines.hardware",
  "vociferous.polish.*",
  "vociferous.gui.*",
]
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "ERA",
  "RUF",
]
ignore = [
  "B905",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
